// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackButton renders with custom label in light theme 1`] = `
<View
  accessibilityLabel="Modules"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "minHeight": 44,
        "minWidth": 44,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      },
      null,
    ]
  }
  testID="back"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "gap": 4,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#006B5E",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      ←
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#006B5E",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      Modules
    </Text>
  </View>
</View>
`;

exports[`BackButton renders with default label in dark theme 1`] = `
<View
  accessibilityLabel="Back"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "minHeight": 44,
        "minWidth": 44,
        "paddingHorizontal": 8,
        "paddingVertical": 8,
      },
      null,
    ]
  }
  testID="back"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "gap": 4,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#00C2A8",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      ←
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#00C2A8",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      Back
    </Text>
  </View>
</View>
`;
